--- a/static/style.css
+++ b/static/style.css
@@ -5,7 +5,6 @@ body,html{
    background: -webkit-linear-gradient(to right, rgb(40, 59, 34), rgb(54, 60, 70), rgb(32, 32, 43));
 	background: linear-gradient(to right, rgb(38, 51, 61), rgb(50, 55, 65), rgb(33, 33, 78));
 }
-
 .chat{
 	margin-top: auto;
 	margin-bottom: auto;
@@ -153,6 +152,8 @@ border-radius: 0 0 15px 15px !important;
 	background-color: rgb(82, 172, 255);
 	padding: 10px;
 	position: relative;
+	word-wrap: break-word; 
+    word-break: break-word;
 }
 .msg_cotainer_send{
 	margin-top: auto;
@@ -162,6 +163,8 @@ border-radius: 0 0 15px 15px !important;
 	background-color: #58cc71;
 	padding: 10px;
 	position: relative;
+	word-wrap: break-word; 
+    word-break: break-word;
 }
 .msg_time{
 	position: absolute;
