--- a/templates/chat_1.html
+++ b/templates/chat_1.html
@@ -36,7 +36,7 @@
 						</div>
 						<div class="card-footer">
 							<form id="messageArea" class="input-group">
-                                <input type="text" id="text" name="msg" placeholder="Type your message..." autocomplete="off" class="form-control type_msg" required/>
+								<textarea id="text" name="msg" placeholder="Type your message..." autocomplete="off" class="form-control type_msg" required></textarea>
 								<div class="input-group-append">
 									<button type="submit" id="send" class="input-group-text send_btn"><i class="fas fa-location-arrow"></i></button>
 								</div>
@@ -45,12 +45,20 @@
 					</div>
 				</div>
 			</div>
-        </div>
+		</div>
         
 
 
 		<script>
-			$(document).ready(function() {
+				$(document).ready(function() {
+					$('#text').keydown(function(e) {
+						// Nếu người dùng nhấn Enter mà không giữ Shift
+						if (e.keyCode === 13 && !e.shiftKey) {
+							e.preventDefault(); // Ngăn không cho xuống dòng
+							$('#messageArea').submit(); // Gửi form
+						}
+						// Không cần xử lý gì đặc biệt cho trường hợp Shift+Enter
+					});
 				$("#messageArea").on("submit", function(event) {
 					const date = new Date();
 					const hour = date.getHours();
@@ -58,11 +66,10 @@
 					const str_time = hour+":"+minute;
 					var rawText = $("#text").val();
 
-					var userHtml = '<div class="d-flex justify-content-end mb-4"><div class="msg_cotainer_send">' + rawText + '<span class="msg_time_send">'+ str_time + '</span></div><div class="img_cont_msg"><img src="https://i.ibb.co/d5b84Xw/Untitled-design.png" class="rounded-circle user_img_msg"></div></div>';
-					
+					var userHtml = '<div class="d-flex justify-content-end mb-4"><div class="msg_cotainer_send"><pre>' + rawText + '</pre><span class="msg_time_send">' + str_time + '</span></div><div class="img_cont_msg"><img src="https://i.ibb.co/d5b84Xw/Untitled-design.png" class="rounded-circle user_img_msg"></div></div>';
 					$("#text").val("");
 					$("#messageFormeight").append(userHtml);
-
+					scrollToBottom();
 					$.ajax({
 						data: {
 							msg: rawText,	
@@ -70,11 +77,17 @@
 						type: "POST",
 						url: "/get",
 					}).done(function(data) {
-						var botHtml = '<div class="d-flex justify-content-start mb-4"><div class="img_cont_msg"><img src="https://i.ibb.co/fSNP7Rz/icons8-chatgpt-512.png" class="rounded-circle user_img_msg"></div><div class="msg_cotainer">' + data + '<span class="msg_time">' + str_time + '</span></div></div>';
-						$("#messageFormeight").append($.parseHTML(botHtml));
+						var botHtml = '<div class="d-flex justify-content-start mb-4"><div class="img_cont_msg"><img src="https://i.ibb.co/fSNP7Rz/icons8-chatgpt-512.png" class="rounded-circle user_img_msg"></div><div class="msg_cotainer"><pre>' + data + '</pre><span class="msg_time">' + str_time + '</span></div></div>';
+                    $("#messageFormeight").append($.parseHTML(botHtml));
+					scrollToBottom();
 					});
 					event.preventDefault();
 				});
+
+				function scrollToBottom() {
+                var messages = $("#messageFormeight");
+                messages.scrollTop(messages[0].scrollHeight);
+            }
 			});
 		</script>
     </body>
