--- a/static/style.css
+++ b/static/style.css
@@ -224,3 +224,30 @@ border-radius: 0 0 15px 15px !important;
 	margin-bottom: 15px !important;
 }
 }
+
+
+.upload-button {
+	position: absolute;
+	top: 20px;
+	left: 20px;
+	padding: 10px 20px;
+	background-color: #007bff;
+	color: #fff;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+	font-weight: bold;
+	transition: background-color 0.3s;
+}
+
+.upload-button:hover {
+	background-color: #0056b3;
+}
+
+.file-info {
+	position: absolute;
+	top: 70px;
+	left: 20px;
+	font-size: 16px;
+	color: #333;
+}
