--- a/templates/chat.html
+++ b/templates/chat.html
@@ -9,15 +9,12 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css')}}"/>
-		<script src="{{ url_for('static', filename='main.js') }}"></script>
+		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/chat.css')}}"/>
 	</head>
 	<body>
 
-		<input type="file" id="fileInput" accept=".pdf, .doc, .docx">
-		<button id="uploadButton">Tải lên</button>
-
-
+        <input type="file" id="fileInput" accept=".pdf, .doc, .docx">
+        <button id="uploadButton">Upload</button>
 		
 		<div class="container-fluid h-100">
 			<div class="row justify-content-center h-100">		
@@ -52,5 +49,5 @@
 			</div>
 		</div>
     </body>
+    <script src="{{ url_for('static', filename='js/chat.js')}}"></script>
 </html>
-
