--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,53 +1,89 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Chatbot</title>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/chat.css')}}"/>
-	</head>
-	<body>
+<head>
+    <title>Chatbot</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/chat.css')}}"/>
+    <style>
+        .custom-div {
+            width: 300px; /* Độ rộng của div */
+            height: 40px; /* Độ cao của div */
+            background-color: #f0f0f0; /* Màu nền của div */
+            border: 1px solid #ccc; /* Viền của div */
+            position: relative; /* Sử dụng vị trí tương đối để xếp chồng */
+            margin-bottom: 20px; /* Khoảng cách dưới giữa các div */
+        }
+        .custom-div_1 {
+            width: 300px; /* Độ rộng của div */
+            height: 60px; /* Độ cao của div */
+            background-color: #f0f0f0; /* Màu nền của div */
+            border: 1px solid #ccc; /* Viền của div */
+            position: relative; /* Sử dụng vị trí tương đối để xếp chồng */
+            margin-bottom: 20px; /* Khoảng cách dưới giữa các div */
+        }
+    </style>
+</head>
+<body>
 
+    <div class="custom-div_1" style="z-index: 3;"> <!-- Xếp đầu tiên -->
         <input type="file" id="fileInput" accept=".pdf, .doc, .docx">
         <button id="uploadButton">Upload</button>
-		
-		<div class="container-fluid h-100">
-			<div class="row justify-content-center h-100">		
-				<div class="col-md-8 col-xl-6 chat">
-					<div class="card">
-						<div class="card-header msg_head">
-							<div class="d-flex bd-highlight">
-								<div class="img_cont">
-									<img src="https://i.ibb.co/fSNP7Rz/icons8-chatgpt-512.png" class="rounded-circle user_img">
-									<span class="online_icon"></span>
-								</div>
-								<div class="user_info">
-									<span>ChatBot</span>
-									<p>Ask me anything!</p>
-								</div>
-							</div>
-						</div>
-						<div id="messageFormeight" class="card-body msg_card_body">
-							
-							
-						</div>
-						<div class="card-footer">
-							<form id="messageArea" class="input-group">
-								<textarea id="text" name="msg" placeholder="Type your message..." autocomplete="off" class="form-control type_msg" required></textarea>
-								<div class="input-group-append">
-									<button type="submit" id="send" class="input-group-text send_btn"><i class="fas fa-location-arrow"></i></button>
-								</div>
-							</form>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-    </body>
-    <script src="{{ url_for('static', filename='js/chat.js')}}"></script>
+    </div>
+    
+    <div class="custom-div" style="z-index: 2;"> <!-- Xếp thứ hai -->
+        <select id="documentSelect" class="custom-select">
+            <option selected>Select Document</option>
+            <option value="document1">Document 1</option>
+            <option value="document2">Document 2</option>
+            <!-- Thêm các option khác nếu cần -->
+        </select>
+    </div>
+    
+    <div class="custom-div" style="z-index: 1;"> <!-- Xếp cuối cùng -->
+        <select id="modelSelect" class="custom-select">
+            <option selected>Select Model</option>
+            <option value="Llama 34b">Llama 34b</option>
+            <option value="VinaLlama 7b">VinaLlama 7b</option>
+            <option value="ChatGPT 4">ChatGPT 4</option>
+            <!-- Thêm các option khác nếu cần -->
+        </select>
+    </div>
+
+    <div class="container-fluid h-100">
+        <div class="row justify-content-center h-100">
+            <div class="col-md-8 col-xl-6 chat">
+                <div class="card">
+                    <div class="card-header msg_head">
+                        <div class="d-flex bd-highlight">
+                            <div class="img_cont">
+                                <img src="https://i.ibb.co/fSNP7Rz/icons8-chatgpt-512.png" class="rounded-circle user_img">
+                                <span class="online_icon"></span>
+                            </div>
+                            <div class="user_info">
+                                <span>ChatBot</span>
+                                <p>Ask me anything!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="messageFormeight" class="card-body msg_card_body">
+
+
+                    </div>
+                    <div class="card-footer">
+                        <form id="messageArea" class="input-group">
+                            <textarea id="text" name="msg" placeholder="Type your message..." autocomplete="off" class="form-control type_msg" required></textarea>
+                            <div class="input-group-append">
+                                <button type="submit" id="send" class="input-group-text send_btn"><i class="fas fa-location-arrow"></i></button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</body>
+<script src="{{ url_for('static', filename='js/chat.js')}}"></script>    
 </html>
