Your commit message here

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -35,8 +35,8 @@
     <div class="custom-div" style="z-index: 2;"> <!-- Xếp thứ hai -->
         <select id="documentSelect" class="custom-select">
             <option selected>Select Document</option>
-            <option value="document1">Document 1</option>
-            <option value="document2">Document 2</option>
+            <option value="2210.04186.pdf">2210.04186.pdf</option>
+            <option value="test_2.txt">test_2.txt</option>
             <!-- Thêm các option khác nếu cần -->
         </select>
     </div>
