--- a/templates/register.html
+++ b/templates/register.html
@@ -19,6 +19,9 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='css/font.css')}}">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}">
     </head>
+    <script>
+        localStorage.setItem('isLoggedIn', false);
+    </script>
     <body>
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
