--- a/templates/signin.html
+++ b/templates/signin.html
@@ -15,8 +15,11 @@
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/normalize.css')}}"/>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css')}}"/>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/message.css')}}"/>
-
+            
     </head>
+    <script>
+        localStorage.setItem('isLoggedIn', false);
+    </script>
     <body>
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
