--- a/templates/chat.html
+++ b/templates/chat.html
@@ -49,8 +49,8 @@
         <select id="modelSelect" class="custom-select">
             <option selected>Select Model</option>
             <option value="Llama 34b">Llama 34b</option>
-            <option value="VinaLlama 7b">VinaLlama 7b</option>
-            <option value="ChatGPT 4">ChatGPT 4</option>
+            <option value="VinaLlama 7b (Not avaiable now)">VinaLlama 7b (Not avaiable now)</option>
+            <option value="ChatGPT 4 (Not avaiable now)">ChatGPT 4 (Not avaiable now)</option>
             <!-- Thêm các option khác nếu cần -->
         </select>
     </div>
